--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet">
     <title>Vertigo</title>
 </head>
+
 <body>
-    
+
     <header>
         <img src="./imagens/logo.svg" alt="logo">
 
@@ -22,12 +27,12 @@
             <form action="">
                 <div class="input-box">
                     <label for="email"></label>
-                <input type="email" placeholder="Digite seu E-mail" id="email">
+                    <input type="email" placeholder="Digite seu E-mail" id="email">
                 </div>
                 <div class="input-box">
                     <label for="senha"></label>
                     <a href="">Esqueceu a senha?</a>
-                <input type="password" placeholder="Digite sua senha " id="senha">
+                    <input type="password" placeholder="Digite sua senha " id="senha">
                 </div>
 
                 <button>Entrar</button>
@@ -38,5 +43,5 @@
         </section>
     </main>
 </body>
-</html>
 
+</html>
