--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
 
             <form action="">
                 <div class="input-box">
-                    <label for="email"></label>
+                    <label for="email">E-mail</label>
                     <input type="email" placeholder="Digite seu E-mail" id="email">
                 </div>
                 <div class="input-box">
-                    <label for="senha"></label>
+                   <div>
+                    <label for="senha">Senha</label>
                     <a href="">Esqueceu a senha?</a>
+                   </div>
                     <input type="password" placeholder="Digite sua senha " id="senha">
                 </div>
 
